--fixed-- sending large files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=8081
 spring.data.mongodb.uri=mongodb://localhost:27017/app
+
+
+#https://stackoverflow.com/questions/34177873/max-limit-of-multipartfile-in-spring-boot
+#spring.servlet.multipart.max-file-size=-1
+#spring.servlet.multipart.max-request-size=-1
+spring.servlet.multipart.max-file-size=10GB
+spring.servlet.multipart.max-request-size=10GB
