Add FileMetadataService class to move logic from controller.
Rename classes to more appropriate names.

Move hard coded path to application.properties.

Remove unused classes, FileDto.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+#pathvarible
+FILES_PATH=src/main/resources/files/
+
+#db
 server.port=8081
 spring.data.mongodb.uri=mongodb://localhost:27017/app
 
-
+#file size limit
 #https://stackoverflow.com/questions/34177873/max-limit-of-multipartfile-in-spring-boot
 #spring.servlet.multipart.max-file-size=-1
 #spring.servlet.multipart.max-request-size=-1
