--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 FILES_PATH: src/main/resources/files/
+API_V1: /api/v1/
 
 server:
   port: 8081
+#  servlet:
+#    context-path: /alpha
 
 spring:
   datasource:
