--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,19 @@
-FILES_PATH: src/main/resources/files/
+FILE_PATH: src/main/resources/files/
 API_V1: /api/v1/
 
 server:
   port: 8081
-#  servlet:
-#    context-path: /alpha
 
 spring:
   datasource:
-    url: jdbc:sqlserver://localhost:1433;databaseName=Test;user=sa;password=Ala_Ma_K0ta;encrypt=true;trustServerCertificate=true
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    url: jdbc:postgresql://localhost:5433/app
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: Ala_Ma_K0ta
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.SQLServer2012Dialect
+#        dialect: org.hibernate.dialect.PostgresSQLDialect
         ddl-auto: create-drop
     generate-ddl: true
   servlet:
