--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -46,10 +46,14 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
-      with: 
-        java-version: 17
-
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+        cache: 'maven'
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
 
     # Initializes the CodeQL tools for scanning.
