--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,6 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<version>3.1.2</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -78,18 +76,13 @@
 			<version>2.7.2</version>
 			<scope>runtime</scope>
 		</dependency>
-
-
-
-
-
-
-
-
-
-
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
