--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,5 +21,11 @@ spring:
       max-file-size: 10GB
       max-request-size: 10GB
 
+
+
+
 # Links
+logging:
+    level:
+      com.project.app: debug
 # https://stackoverflow.com/questions/34177873/max-limit-of-multipartfile-in-spring-boot
