--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,11 +19,11 @@ spring:
         jdbc:
           batch_size: 1000
     generate-ddl: true
+    show-sql: false
   servlet:
     multipart:
       max-file-size: 10GB
       max-request-size: 10GB
-
 
 
 
