--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,20 +1,52 @@
-FILE_PATH: src/main/resources/files/
+# FILE_PATH: src/main/resources/files/
+# API_V1: /api/v1/
+# BATCH_SIZE: 1000
+
+
+# server:
+#   port: 8081
+
+# spring:
+#   datasource:
+#     url: jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#     driver-class-name: org.hsqldb.jdbc.JDBCDriver
+#     username: sa
+#     password:
+#   jpa:
+#     properties:
+#       hibernate:
+#         ddl-auto: create-drop
+#     generate-ddl: true
+#     database-platform: org.hibernate.dialect.HSQLDialect
+
+FILE_PATH: src/test/resources/files/
 API_V1: /api/v1/
 BATCH_SIZE: 1000
 
-
 server:
-  port: 8081
+  port: 8082
 
 spring:
   datasource:
-    url: jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driver-class-name: org.hsqldb.jdbc.JDBCDriver
-    username: sa
-    password:
+    url: jdbc:postgresql://localhost:5432/test
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: Ala_Ma_K0ta
   jpa:
+    hibernate:
+      ddl-auto: create-drop
     properties:
       hibernate:
-        ddl-auto: create-drop
+        jdbc:
+          batch_size: 1000
     generate-ddl: true
-    database-platform: org.hibernate.dialect.HSQLDialect
+    show-sql: true
+    defer-datasource-initialization: true
+  servlet:
+    multipart:
+      max-file-size: 10GB
+      max-request-size: 10GB
+
+logging:
+    level:
+      com.project.app: debug
